<resources>
    <string name="app_name">JsonPlaceholder</string>
    <string name="bs">bs</string>
    <string name="catch_phrase">Catch phrase</string>
    <string name="company">Company</string>
    <string name="company_detail">Company detail</string>
    <string name="user_detail">User detail</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="suite">Suite</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
</resources>
