<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher_round"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/user_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="2dp"
        android:layout_below="@+id/user_image">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/user_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_detail"
                android:layout_marginBottom="8dp"
                style="@style/text_title"/>

            <TextView
                android:id="@+id/user_detail_title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_below="@+id/user_detail_title"
                style="@style/text_title"/>

            <TextView
                android:id="@+id/user_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_detail_title_name"
                style="@style/text_user_detail"/>

            <TextView
                android:id="@+id/user_detail_title_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_detail_name"
                android:text="@string/username"
                style="@style/text_title"/>

            <TextView
                android:id="@+id/user_detail_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_detail_title_username"
                style="@style/text_user_detail"/>

            <TextView
                android:id="@+id/user_detail_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_detail_username"
                android:text="@string/email"
                style="@style/text_title"/>

            <TextView
                android:id="@+id/user_detail_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_detail_email_title"
                style="@style/text_user_detail"/>

            <TextView
                android:id="@+id/user_detail_phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_detail_email"
                android:text="@string/phone"
                style="@style/text_title"/>

            <TextView
                android:id="@+id/user_detail_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_detail_phone_title"
                style="@style/text_user_detail"/>

            <TextView
                android:id="@+id/user_detail_website_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_detail_phone"
                android:text="@string/website"
                style="@style/text_title"/>
            <TextView
                android:id="@+id/user_detail_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_detail_website_title"
                style="@style/text_user_detail_end"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/user_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="4dp"
        android:layout_below="@+id/user_detail">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                style="@style/text_title"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/street_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:layout_below="@+id/address"
                style="@style/text_title"/>

            <TextView
                android:id="@+id/street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/street_title"
                style="@style/text_user_detail"/>

            <TextView
                android:id="@+id/suite_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/street"
                android:text="@string/suite"
                style="@style/text_title"/>

            <TextView
                android:id="@+id/suite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/suite_title"
                style="@style/text_user_detail"/>

            <TextView
                android:id="@+id/city_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/suite"
                android:text="@string/city"
                style="@style/text_title"/>

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/city_title"
                style="@style/text_user_detail"/>

            <TextView
                android:id="@+id/zipcode_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/city"
                android:text="@string/zipcode"
                style="@style/text_title"/>

            <TextView
                android:id="@+id/zipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/zipcode_title"
                style="@style/text_user_detail_end"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="4dp"
        android:layout_below="@+id/user_address">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/company_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_detail"
                style="@style/text_title"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/user_detail_company_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                style="@style/text_title"
                android:layout_below="@+id/company_detail"/>

            <TextView
                android:id="@+id/user_detail_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_user_detail"
                android:layout_below="@+id/user_detail_company_name_title"/>

            <TextView
                android:id="@+id/catch_phrase_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_detail_company_name"
                android:text="@string/catch_phrase"
                style="@style/text_title"/>

            <TextView
                android:id="@+id/catch_phrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/catch_phrase_title"
                style="@style/text_user_detail"/>

            <TextView
                android:id="@+id/bs_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/catch_phrase"
                android:text="@string/bs"
                style="@style/text_title"/>

            <TextView
                android:id="@+id/bs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bs_title"
                style="@style/text_user_detail_end"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>